broken on merge

--- a/frontend/templates/sell_buy.html
+++ b/frontend/templates/sell_buy.html
@@ -54,12 +54,14 @@
             color: #2d662d;
         }
     </style>
+
 </head>
 <body>
     <div class="header">
         <a href="{{ url_for('data_selection') }}">General Info</a>
-        <a href="{{ url_for('plot_list') }}">My Subscriptions</a>
+        <a href="{{ url_for('plot_list') }}">Streaming</a>
         <a href="{{ url_for('history_of_trades') }}">My History</a> 
+        <a href="{{ url_for('sell_buy') }}">Make A Transaction</a> 
     </div>
 
     <h1>Currency Transaction</h1>
