--- a/frontend/templates/data_selection.html
+++ b/frontend/templates/data_selection.html
@@ -11,8 +11,9 @@
 
     <div class="header">
         <a href="{{ url_for('data_selection') }}">General Info</a>
-        <a href="{{ url_for('plot_list') }}">My Subscriptions</a>
+        <a href="{{ url_for('plot_list') }}">Streaming</a>
         <a href="{{ url_for('history_of_trades') }}">My History</a> 
+        <a href="{{ url_for('sell_buy') }}">Make A Transaction</a> 
     </div>
 
     <blockquote>
