--- a/frontend/templates/history_of_trades.html
+++ b/frontend/templates/history_of_trades.html
@@ -28,6 +28,12 @@
 
 </head>
 <body>
+    <div class="header">
+        <a href="{{ url_for('data_selection') }}">General Info</a>
+        <a href="{{ url_for('plot_list') }}">Streaming</a>
+        <a href="{{ url_for('history_of_trades') }}">My History</a> 
+        <a href="{{ url_for('sell_buy') }}">Make A Transaction</a> 
+    </div>
 
     <h1>My History of Trades</h1>
 
