--- a/frontend/templates/streaming.html
+++ b/frontend/templates/streaming.html
@@ -51,6 +51,14 @@
             .then(data => {
                 const ctx = document.getElementById('chart').getContext('2d');
 
+                if (window.fetchInterval != null) {
+                    clearInterval(window.fetchInterval);
+                }
+
+                if (window.chart instanceof Chart) {
+                    window.chart.destroy();
+                }
+
                 window.chart = new Chart(ctx, {
                     type: 'line',
                     data: {
@@ -86,25 +94,30 @@
                     }
                 });
 
-                setInterval(() => fetchDataAndUpdate(currency, window.chart), 2000);
+                window.fetchInterval = setInterval(() => fetchDataAndUpdate(currency, window.chart), 2000);
+
             });
     };
 
     function updateChart(chart, data) {
-        chart.data.labels = data.labels;
-        chart.data.datasets.forEach((dataset) => {
-            dataset.data = data.values;
-        });
-        chart.update();
+        if (chart instanceof Chart) {
+            chart.data.labels = data.labels;
+            chart.data.datasets.forEach((dataset) => {
+                dataset.data = data.values;
+            });
+            chart.update();
+        }
     }
 
     function fetchDataAndUpdate(token, chart) {
-        let url = new URL('/submit_realtime', window.location.origin);
-        url.searchParams.append('token', token);
-        fetch(url)
-            .then(response => response.json())
-            .then(data => updateChart(chart, data))
-            .catch(error => console.error('Error fetching data:', error));
+        if (chart instanceof Chart) {
+            let url = new URL('/submit_realtime', window.location.origin);
+            url.searchParams.append('token', token);
+            fetch(url)
+                .then(response => response.json())
+                .then(data => updateChart(chart, data))
+                .catch(error => console.error('Error fetching data:', error));
+        }
     }
 </script>
 
